--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -34,7 +34,7 @@ window#waybar.hidden {
   color: #cdd6f4;
 }
 
-#workspaces button.active {
+#workspaces button.active, #workspaces button.active:hover {
   color: #1e1e2e;
   background-color: #cdd6f4;
 }
@@ -42,8 +42,10 @@ window#waybar.hidden {
 #workspaces button:hover {
   box-shadow: inherit;
   text-shadow: inherit;
-  color: #1e1e2e;
-  background-color: #cdd6f4;
+  color: #cdd6f4;
+  background-color: #45475a;
+  border-radius: 15px;
+  transition: border-radius 1s;
 }
 
 #workspaces button.urgent {
